# build-physician

./: .gitignore  README.md  vercel.json
.github/workflows/: master.yml
api/: app.py  config.py  dockerfile  pyproject.toml
api/apis/: __init__.py  auth.py  builds.py  interview.py  meeting.py  projects.py  roadmap.py
api/constants/: language.py  uri.py  user.py
api/db/: __init__.py  connection.py
api/db/models/: __init__.py  interview.py  meeting.py  roadmap.py  user.py
api/integrations/: emails.py  firebase.py  gmeet.py  gmeet_auth.py  message_queue.py  mq.py  resend.py  session.py  zoom.py
api/integrations/db/: mongo.py  redis.py
api/integrations/meetings/: gmeet.py  zoom.py
api/integrations/mq/: __init__.py
api/integrations/mq/emails/: __init__.py  callback.py  task.py
api/models/: interview.py  meeting.py  roadmap.py
api/repo/: Interview.py  __init__.py  builds.py  meeting.py  projects.py
api/repository/: meeting.py
api/services/: builds.py  gmeet.py  inteview.py  meeting.py  projects.py  roadmap.py  zoom.py
api/utils/: encoder.py  key_gen.py  response.py
client/: bun.lockb  mf-config.ts  package.json  rsbuild.config.ts  tsconfig.json  vercel.json
client/@mf-types/: index.d.ts
client/@mf-types/editor/: apis.d.ts  index.d.ts
client/src/: App.tsx  app.tsx  bootstrap.tsx  env.d.ts  index.tsx  routeTree.gen.ts  styled.d.ts
client/src/apis/: useGoogleLogin.ts
client/src/components/: RoadMapBuilder.tsx
client/src/constants/: config.ts
client/src/hooks/: useFocusRootNode.ts  useSwitch.ts
client/src/integrations/: firebase.ts  network.tsx
client/src/routes/: __root.tsx  _auth.tsx  _noauth.tsx  home.tsx  index.tsx  meeting.$meetingId.tsx  signin.tsx
client/src/store/: auth.ts
client/src/theme/: GlobalStyles.tsx  index.css  index.tsx  theme.ts  units.ts
client/src/utils/: formatFileSize.ts  moduleNameExtracter.ts
editor/: bun.lockb  mf-config.ts  package.json  rsbuild.config.ts
editor/src/: App.tsx  Editor.tsx
emails/emails/: meeting-invite.tsx
plugin/: bun.lockb  package.json
plugin/src/: index.ts
plugin/src/api/: DTO.ts  index.ts  type.ts
plugins/: package.json
(+62 files in other folders)
