[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Sayantan Samanta <sssamanta789@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
flask-restx = "^1.3.0"
resend = "^2.1.0"
python-dotenv = "^1.0.1"
pydantic = {extras = ["email"], version = "^2.7.4"}
gunicorn = "^22.0.0"
peewee = "^3.17.6"
psycopg2-binary = "^2.9.9"
firebase-admin = "^6.5.0"
flask-session = "^0.8.0"
flask-cors = "^4.0.1"
redis = "^5.0.7"
glom = "^23.5.0"
pandas = "^2.2.3"
google-genai = "==1.3.0"
mypy = "==1.15.0"
pymongo = "==4.11.2"
pydantic-settings = "==2.8.1"
uvicorn = "==0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
